- Forgot to override the isConnected Method in Profile.

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
-#Wed Mar 08 13:08:22 EST 2017
-=======
-#Wed Mar 08 13:13:10 EST 2017
->>>>>>> f45c1dab07295982ff231b8c5392be03f5e16537
+#Thu Mar 09 18:43:09 EST 2017
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=f45c1dab07295982ff231b8c5392be03f5e16537
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-2.14.1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-3.3-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
