--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".SignInActivity"/>
         <activity android:name=".MainActivity"/>
+        <activity android:name=".StoryChooserActivity"/>
     </application>
 
 </manifest>
