--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".SignInActivity"/>
         <activity android:name=".MainActivity"/>
         <activity android:name=".StoryChooserActivity"/>
+        <activity android:name=".StoryCreatorActivity"/>
     </application>
 
 </manifest>
