--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile 'com.google.android.gms:play-services-auth:10.2.0'
+    compile 'com.android.support:design:23.0.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
