- Added some logic in StoryCreatorActivity (incomplete)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".MainActivity"/>
         <activity android:name=".StoryChooserActivity"/>
         <activity android:name=".StoryCreatorActivity"/>
+        <activity android:name=".StoryEditorActivity"/>
     </application>
 
 </manifest>
