--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
-    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:design:23.1.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.android.support:cardview-v7:23.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
