--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".StoryChooserActivity"/>
         <activity android:name=".StoryCreatorActivity"/>
         <activity android:name=".StoryEditorActivity"/>
-        <activity android:name=".fragments.StoryReaderActivity"/>
+        <activity android:name=".StoryReaderActivity"/>
     </application>
 
 </manifest>
