Restructured the Signin process. Added LoadProfileActivity : loads all the information related to the current logged in Google Account.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".LoadingActivity"
+        <activity android:name=".LoadProfileActivity"
             android:screenOrientation="portrait"/>
         <activity android:name=".SignInActivity"
             android:screenOrientation="portrait"/>
